refactor: migrate from MyBatis to JPA and update entity configurations
fix: correct SQL delete statements and table names in entities
feat: add UUID generation for entity IDs and update ID strategies
test: update tests to use Spring Data JPA repositories and Page
build: remove hibernate-core dependency and update pom.xml